5.0.0 -> 5.1a1:
    - jbj: add verify(N) = E:V-R runtime dependency probe. more to do ...
    - jbj: stub in RPMTAG_FILESTAT and RPMTAG_STAT extensions, w-i-p.
    - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
    - rse: provide %{shrink:<body>} macro for removing leading+trailing and removing intermediate whitespaces
    - rse: allow sub-shell and Lua independent speedy lookup of environment variables via %{getenv:<name>} in macros
    - jbj: QNX needs defines for fts.c.
    - rse: upgrade from Lua 5.1.2 to Lua 5.1.3 (external and internal)
    - jbj: include <pthread.h> everywhere.
    - jbj: rpmsq.h doesn't need pthread condvar/mutex any more.
    - jbj: QNX does not have insque/remque.
    - jbj: QNX does not have d_off.
    - rse: add RPM Lua function rpm.debug() to complement rpm.verbose()
    - mej: catch EOF returned as RPMRC_NOTFOUND correctly.
    - rse: add support for QNX by adjusting to its 3-parameter based makedev(2)
    - jbj: resurrect rpm.spec.in.
    - jbj: fix: permit %{lua:...} to recurse.
    - rse: allow to compile without <langinfo.h> and its nl_langinfo(3)
    - rse: provide RPM Lua function posix.glob(<pattern>)
    - rse: make older C compiler happy by not declaring a variable in the middle of a block in rpmconstant/constant.c
    - rse: let RPM Lua init procedure load all init scripts configured with new Autoconf option --with-path-rpmlua 
    - rse: fix Autoconf procedure by running python(1) based checks only under --with-python
    - rse: provide RPM Lua function rpm.realpath(<path>) to complement RPM macro %{realpath:<path>}
    - rse: unconditionally provide RPM Lua functions posix.{setenv,unsetenv}
    - jbj: proof-of-concept rpmbuild --lsb implementation. ptooey!
    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
    - jbj: fix several typos noticed by the translation project.
    - jbj: add -noautoreq/--noautoprov options to rpmbuild.