@@ -1,4 +1,6 @@
 5.0.0 -> 5.1a1:
+    - jbj: fix: no output performing verify(...) probe.
+    - jbj: fix: insure valid exit code for verify(...) probe.
     - jbj: add verify(N) = E:V-R runtime dependency probe. more to do ...
     - jbj: stub in RPMTAG_FILESTAT and RPMTAG_STAT extensions, w-i-p.
     - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
